@startuml



entity "user"  {
    *username : string
    *email: string
    *phoneNumber : string
    --
    *fullName : string
    *password : string
}
entity "projectsUsers" {
    *userId : string
    *projectId : string
    *userRole: string
}


entity "project" {
    id : String <<generated>>
    --
    name : String 
    creator: String
    done: boolean
    quantityOfTasks: Number
}


entity "task" {
    *id : string <<generated>>
    --
    *creator: string
    *name: string
    *done: boolean
    *projectId: string
}

user ||..o{ projectsUsers
project ||..o{ projectsUsers
project ||..o{ task


@enduml